--- a/CS/Web.config
+++ b/CS/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -6,84 +6,71 @@
 <configuration>
   <configSections>
     <sectionGroup name="devExpress">
-      <section name="compression" type="DevExpress.Web.ASPxClasses.CompressionConfigurationSection, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-      <section name="themes" type="DevExpress.Web.ASPxClasses.ThemesConfigurationSection, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-      <section name="errors" type="DevExpress.Web.ASPxClasses.ErrorsConfigurationSection, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-      <section name="settings" type="DevExpress.Web.ASPxClasses.SettingsConfigurationSection, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false" />
+      <section name="compression" type="DevExpress.Web.ASPxClasses.CompressionConfigurationSection, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a"/>
+      <section name="themes" type="DevExpress.Web.ASPxClasses.ThemesConfigurationSection, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a"/>
+      <section name="errors" type="DevExpress.Web.ASPxClasses.ErrorsConfigurationSection, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a"/>
+      <section name="settings" type="DevExpress.Web.ASPxClasses.SettingsConfigurationSection, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" requirePermission="false"/>
     </sectionGroup>
   </configSections>
   <appSettings>
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="false" />
+    <add key="ClientValidationEnabled" value="true"/>
+    <add key="UnobtrusiveJavaScriptEnabled" value="false"/>
   </appSettings>
   <system.web>
-    <customErrors mode="Off" />
-    <authentication mode="Forms" />
+    <customErrors mode="Off"/>
+    <authentication mode="Forms"/>
     <pages>
       <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
-        <add namespace="DevExpress.Utils" />
-        <add namespace="DevExpress.Web.ASPxClasses" />
-        <add namespace="DevExpress.Web.ASPxGridView" />
-        <add namespace="DevExpress.Web.ASPxGridView.Export" />
-        <add namespace="DevExpress.Web.ASPxEditors" />
-        <add namespace="DevExpress.Web.ASPxCallbackPanel" />
-        <add namespace="DevExpress.Web.ASPxMenu" />
-        <add namespace="DevExpress.Web.ASPxNavBar" />
-        <add namespace="DevExpress.Web.ASPxPopupControl" />
-        <add namespace="DevExpress.Web.ASPxRoundPanel" />
-        <add namespace="DevExpress.Web.ASPxSplitter" />
-        <add namespace="DevExpress.Web.ASPxTabControl" />
-        <add namespace="DevExpress.Web.ASPxTreeView" />
-        <add namespace="DevExpress.Web.ASPxUploadControl" />
-        <add namespace="DevExpress.Web.ASPxHtmlEditor" />
-        <add namespace="DevExpress.Web.ASPxSpellChecker" />
-        <add namespace="DevExpress.XtraCharts" />
-        <add namespace="DevExpress.XtraCharts.Web" />
-        <add namespace="DevExpress.XtraReports" />
-        <add namespace="DevExpress.XtraReports.UI" />
-        <add namespace="DevExpress.XtraReports.Web" />
-        <add namespace="DevExpress.XtraPivotGrid" />
-        <add namespace="DevExpress.Data.PivotGrid" />
-        <add namespace="DevExpress.Web.ASPxPivotGrid" />
-        <add namespace="DevExpress.Web.ASPxPivotGrid.Export" />
-        <add namespace="DevExpress.Web.Mvc" />
-        <add namespace="DevExpress.Web.Mvc.UI" />
+        <add namespace="System.Web.Helpers"/>
+        <add namespace="System.Web.Mvc"/>
+        <add namespace="System.Web.Mvc.Ajax"/>
+        <add namespace="System.Web.Mvc.Html"/>
+        <add namespace="System.Web.Routing"/>
+        <add namespace="System.Web.WebPages"/>
+        <add namespace="DevExpress.Utils"/>
+        <add namespace="DevExpress.Web.ASPxClasses"/>
+        <add namespace="DevExpress.Web.ASPxGridView"/>
+        <add namespace="DevExpress.Web.ASPxGridView.Export"/>
+        <add namespace="DevExpress.Web.ASPxEditors"/>
+        <add namespace="DevExpress.Web.ASPxCallbackPanel"/>
+        <add namespace="DevExpress.Web.ASPxSplitter"/>
+        <add namespace="DevExpress.Web.ASPxTabControl"/>
+        <add namespace="DevExpress.XtraCharts"/>
+        <add namespace="DevExpress.XtraCharts.Web"/>
+        <add namespace="DevExpress.XtraReports.Web"/>
+        <add namespace="DevExpress.Web.Mvc"/>
+        <add namespace="DevExpress.Web.Mvc.UI"/>
       </namespaces>
     </pages>
     <httpHandlers>
-      <add type="DevExpress.Web.ASPxUploadControl.ASPxUploadProgressHttpHandler, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" validate="false" />
+      <add type="DevExpress.Web.ASPxUploadControl.ASPxUploadProgressHttpHandler, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" validate="false"/>
     </httpHandlers>
     <httpModules>
-      <add type="DevExpress.Web.ASPxClasses.ASPxHttpHandlerModule, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
+      <add type="DevExpress.Web.ASPxClasses.ASPxHttpHandlerModule, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule"/>
     </httpModules>
+    <compilation debug="true"/>
   </system.web>
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false" />
+    <validation validateIntegratedModeConfiguration="false"/>
     <modules runAllManagedModulesForAllRequests="true">
-      <add type="DevExpress.Web.ASPxClasses.ASPxHttpHandlerModule, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule" />
+      <add type="DevExpress.Web.ASPxClasses.ASPxHttpHandlerModule, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" name="ASPxHttpHandlerModule"/>
     </modules>
     <handlers>
-      <add type="DevExpress.Web.ASPxUploadControl.ASPxUploadProgressHttpHandler, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" name="ASPxUploadProgressHandler" preCondition="integratedMode" />
+      <add type="DevExpress.Web.ASPxUploadControl.ASPxUploadProgressHttpHandler, DevExpress.Web.v14.1, Version=14.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" verb="GET,POST" path="ASPxUploadProgressHandlerPage.ashx" name="ASPxUploadProgressHandler" preCondition="integratedMode"/>
     </handlers>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="3.0.0.0-3.0.0.1" newVersion="3.0.0.1" />
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35"/>
+        <bindingRedirect oldVersion="3.0.0.0-3.0.0.1" newVersion="3.0.0.1"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <devExpress>
-    <compression enableHtmlCompression="false" enableCallbackCompression="true" enableResourceCompression="true" enableResourceMerging="true" />
-    <themes enableThemesAssembly="true" />
-    <errors callbackErrorRedirectUrl="" />
-    <settings embedRequiredClientLibraries="true" />
+    <compression enableHtmlCompression="false" enableCallbackCompression="true" enableResourceCompression="true" enableResourceMerging="true"/>
+    <themes enableThemesAssembly="true"/>
+    <errors callbackErrorRedirectUrl=""/>
+    <settings embedRequiredClientLibraries="true"/>
   </devExpress>
 </configuration>
